# Graph-Pattern-Matching-Challenge

./: .gitignore  CMakeLists.txt  README.md  checker.txt
candidate_set/: test.cs
include/: backtrack.h  checker.h
main/: CMakeLists.txt  check.cc
src/: backtrack.cc  checker.cc
